--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "css-loader": "^0.15.6",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
-    "history": "^1.13.1",
+    "history": "1.13.x",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
