--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run deploy && npm run dev",
     "clean": "rm -rf dist",
-    "dev": "node examples/dev.server.js",
+    "dev": "node examples/devServer.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "build:lib": "babel components --out-dir lib",
     "build:style": "webpack -p --config webpack.config.style.js",
@@ -22,6 +22,7 @@
     "babel-loader": "^5.3.2",
     "bundle-loader": "^0.5.0",
     "css-loader": "^0.15.6",
+    "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
     "history": "1.13.x",
@@ -32,7 +33,7 @@
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-middleware": "^1.4.0"
   },
   "tags": [
     "react",
