--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack-dev-middleware": "^1.4.0"
+    "webpack-dev-server": "^1.14.0"
   },
   "tags": [
     "react",
