--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rm -rf dist",
     "dev": "node examples/devServer.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
+    "lint": "eslint components examples --ext '.js,.jsx'",
     "build:lib": "babel components --out-dir lib",
     "build:style": "webpack -p --config webpack.config.style.js",
     "build:umd": "webpack components/index.js dist/dragon-ui.js --config webpack.config.umd.js",
@@ -22,6 +23,10 @@
     "babel-loader": "^5.3.2",
     "bundle-loader": "^0.5.0",
     "css-loader": "^0.15.6",
+    "eslint": "^1.1.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-babel": "^3.0.0",
+    "eslint-plugin-react": "^3.3.1",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
