--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragon-ui",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "main": "lib/index.js",
   "scripts": {
     "start": "npm run deploy && npm run dev",
@@ -30,11 +30,10 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
-    "history": "^1.13.x",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^1.0.2",
+    "react-router": "^2.0.0-rc5",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
