--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "start": "npm run deploy && npm run dev",
     "clean": "rm -rf dist",
-    "dev": "node examples/devServer.js",
-    "deploy": "rm -rf node_modules && npm install && npm run build",
     "lint": "eslint components examples --ext '.js,.jsx'",
+    "dev": "node examples/devServer.js",
+    "pro": "webpack --config webpack.config.pro.js",
+    "deploy": "rm -rf node_modules && npm install && npm run build",
     "build:lib": "babel components --out-dir lib",
     "build:style": "webpack -p --config webpack.config.style.js",
     "build:umd": "webpack components/index.js dist/dragon-ui.js --config webpack.config.umd.js",
