--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
+    "node-sass": "^3.4.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
@@ -37,6 +38,7 @@
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.0"
   },
   "tags": [
