--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "npm run deploy && npm run dev",
     "clean": "rm -rf dist",
     "dev": "node examples/devServer.js",
+    "pro": "rm -rf assets && webpack --config webpack.config.pro.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "lint": "eslint components examples --ext '.js,.jsx'",
     "build:lib": "babel components --out-dir lib",
