--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint components examples --ext '.js,.jsx'",
     "dev": "node examples/devServer.js",
-    "pro": "webpack --config webpack.config.pro.js",
+    "pro": "rm -rf assets && webpack --config webpack.config.pro.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "build:lib": "babel components --out-dir lib",
     "build:style": "webpack -p --config webpack.config.style.js",
