--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "npm run deploy && npm run dev",
-    "clean": "rm -rf dist",
-    "dev": "node examples/devServer.js",
+    "clean": "rm -rf lib && rm -rf dist",
+    "dev": "node devServer.js",
     "pro": "rm -rf assets && webpack --config webpack.config.pro.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "lint": "eslint components examples --ext '.js,.jsx'",
     "build:lib": "babel components --out-dir lib",
-    "build:style": "webpack -p --config webpack.config.style.js",
-    "build:umd": "webpack components/index.js dist/dragon-ui.js --config webpack.config.umd.js",
-    "build:umd:min": "webpack -p components/index.js dist/dragon-ui.min.js --config webpack.config.umd.js",
-    "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min && npm run build:style"
+    "build:umd": "webpack --config webpack.config.umd.js",
+    "build:umd:min": "webpack -p --config webpack.config.umd.min.js",
+    "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min"
   },
   "dependencies": {
     "classnames": "^2.1.3"
