--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-dom": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0-rc5",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.17.0",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
