--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,9 @@
     "no-param-reassign": 0,
     "no-this-before-super": 2,
     "no-undef": 2,
+    "no-shadow": 0,
+    "no-script-url": 0,
+    "no-unused-expressions": 0,
     "no-unused-vars": [2, { "vars": "all", "args": "none" }],
     "babel/object-shorthand": 0,
     "react/jsx-no-duplicate-props": 2,
