--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "bundle-loader": "^0.5.0",
     "css-loader": "^0.15.6",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^1.0.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^3.0.0",
-    "eslint-plugin-react": "^3.3.1",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^0.9.1",
     "highlight.js": "^9.0.0",
