--- a/.eslintrc
+++ b/.eslintrc
@@ -46,10 +46,18 @@
     "import/no-extraneous-dependencies": 0,
     "jsx-a11y/no-static-element-interactions": 0,
     "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/interactive-supports-focus": 0,
+    "jsx-a11y/role-has-required-aria-props": 0,
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
+    "jsx-a11y/label-has-for": 0,
     "space-after-keywords": 0,
     "space-before-blocks": 0,
     "space-before-function-paren": 0,
     "spaced-comment": 0,
+    "no-plusplus": 0,
+    "no-mixed-operators": 0,
+    "no-underscore-dangle": 0,
+    "function-paren-newline": 0,
     "vars-on-top": 0,
     "id-length": 0
   }
