--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "build:lib": "babel components --out-dir lib",
     "build:umd": "webpack --config webpack.config.umd.js",
     "build:umd:min": "webpack -p --config webpack.config.umd.min.js",
-    "build":
-      "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min"
+    "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min"
   },
   "dependencies": {
-    "classnames": "^2.1.3"
+    "classnames": "^2.1.3",
+    "omit.js": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -50,8 +50,16 @@
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.0"
   },
-  "tags": ["react", "dragon"],
-  "keywords": ["react", "react-component", "dragon-ui", "dragon"],
+  "tags": [
+    "react",
+    "dragon"
+  ],
+  "keywords": [
+    "react",
+    "react-component",
+    "dragon-ui",
+    "dragon"
+  ],
   "description": "UI for react.js",
   "author": "Jerome.Lin <16908091@qq.com>",
   "license": "MIT",
