chore: update babel

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
-{
-  stage: 0
+{ 
+  "presets" : [["env", { "modules": false }], "stage-0", "react"],
+  "env": {
+    "development": {
+      "plugins" : ["react-hot-loader/babel", "transform-runtime"]
+    },
+    "production": {
+      "plugins" : ["transform-runtime"]
+    }
+  }
 }
