--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min"
   },
   "dependencies": {
-    "classnames": "^2.1.3",
-    "omit.js": "^1.0.0"
+    "babel-runtime": "^6.26.0",
+    "classnames": "^2.1.3"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.8.21",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -34,21 +36,22 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "highlight.js": "^9.0.0",
     "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.17.0",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^3.4.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^3.1.3",
     "react-router": "^3.2.1",
-    "sass-loader": "^3.1.1",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.0"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   },
   "tags": [
     "react",
