--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npm run deploy && npm run dev",
     "clean": "rm -rf lib && rm -rf dist",
-    "dev": "node devServer.js",
+    "dev": "webpack-dev-server --config webpack.config.dev.js",
     "pro": "rm -rf assets && webpack --config webpack.config.pro.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "lint": "eslint components examples --ext '.js,.jsx'",
@@ -19,7 +19,7 @@
     "classnames": "^2.1.3"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^3.1.0",
+    "autoprefixer": "^8.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -36,18 +36,19 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.13.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "highlight.js": "^9.0.0",
-    "html-loader": "^0.4.3",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^3.4.2",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^3.1.3",
     "react-router": "^3.2.1",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.12.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
