--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "pro": "rm -rf assets && webpack --config webpack.config.pro.js",
     "deploy": "rm -rf node_modules && npm install && npm run build",
     "lint": "eslint components examples --ext '.js,.jsx'",
-    "build:lib": "babel components --out-dir lib",
+    "build:lib": "NODE_ENV=production babel components --out-dir lib",
     "build:umd": "webpack --config webpack.config.umd.js",
     "build:umd:min": "webpack -p --config webpack.config.umd.min.js",
     "build": "npm run clean && npm run build:lib && npm run build:umd && npm run build:umd:min"
@@ -21,12 +21,13 @@
     "autoprefixer": "^8.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "bundle-loader": "^0.5.0",
     "css-loader": "^0.15.6",
     "eslint": "^4.19.1",
