--- a/.babelrc
+++ b/.babelrc
@@ -2,11 +2,11 @@
   "env": {
     "development": {
       "plugins" : ["react-hot-loader/babel", "transform-runtime"],
-      "presets" : ["env", "stage-0", "react"]
+      "presets" : [["env"], "stage-0", "react"]
     },
     "production": {
       "plugins" : ["transform-runtime"],
-      "presets" : [["env", { "modules": false }], "stage-0", "react"]
+      "presets" : ["env", "stage-0", "react"]
     }
   }
 }
