--- a/.eslintrc
+++ b/.eslintrc
@@ -52,6 +52,7 @@
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/label-has-for": 0,
     "arrow-body-style": 0,
+    "arrow-parens": 0,
     "space-after-keywords": 0,
     "space-before-blocks": 0,
     "space-before-function-paren": 0,
