--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.15.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-za": "^1.0.1",
     "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
