--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lint:ts": "tslint -c tslint.json 'components/**/*.{ts,tsx}'",
     "lint:js": "eslint examples --ext '.js,.jsx'",
     "lint:style": "stylelint styles/**/*.scss examples/styles/**/*.scss --syntax scss",
+    "lint:style:fix": "stylelint --fix styles/**/*.scss examples/styles/**/*.scss --syntax scss",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:style",
     "lint-staged": "lint-staged",
     "test": "jest --coverage",
@@ -53,6 +54,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "normalize.css": "^7.0.0",
+    "react-scroll-up": "^1.3.3",
     "zscroller": "^0.2.5"
   },
   "devDependencies": {
@@ -163,7 +165,7 @@
   "lint-staged": {
     "components/**/*.{ts,tsx}": "lint:ts",
     "{components,examples}/**/*.{js,jsx}": "lint:js",
-    "{styles,examples}/**/*.scss": "lint:style"
+    "{styles}/**/*.scss": "lint:style"
   },
   "pre-commit": [
     "lint-staged"
