--- a/package.json
+++ b/package.json
@@ -52,8 +52,12 @@
     "authors": "git log --format='%aN <%aE>' | sort -u | grep -v 'users.noreply.github.com' > AUTHORS"
   },
   "dependencies": {
+    "babel-standalone": "^6.26.0",
     "classnames": "^2.2.5",
+    "codemirror": "^5.38.0",
+    "marked": "^0.4.0",
     "normalize.css": "^7.0.0",
+    "prismjs": "^1.15.0",
     "react-scroll-up": "^1.3.3",
     "zscroller": "^0.2.5"
   },
@@ -74,6 +78,7 @@
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -112,6 +117,7 @@
     "pre-commit": "^1.2.2",
     "prop-types": "^15.5.10",
     "raf": "^3.4.0",
+    "raw-loader": "^0.5.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
