--- a/package.json
+++ b/package.json
@@ -52,20 +52,14 @@
     "authors": "git log --format='%aN <%aE>' | sort -u | grep -v 'users.noreply.github.com' > AUTHORS"
   },
   "dependencies": {
-    "babel-standalone": "^6.26.0",
     "classnames": "^2.2.5",
-    "codemirror": "^5.38.0",
-    "marked": "^0.4.0",
-    "normalize.css": "^7.0.0",
-    "prismjs": "^1.15.0",
-    "react-scroll-up": "^1.3.3",
-    "zscroller": "^0.2.5"
+    "normalize.css": "^7.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
     "@types/enzyme-to-json": "^1.5.0",
     "@types/jest": "^21.1.5",
-    "@types/react": "^16.0.19",
+    "@types/react": "16.4.2",
     "@types/react-dom": "^16.0.2",
     "autoprefixer": "^6.7.7",
     "awesome-typescript-loader": "^3.2.3",
@@ -83,6 +77,8 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "babel-standalone": "^6.26.0",
+    "codemirror": "^5.38.0",
     "core-js": "^2.5.1",
     "coveralls": "^2.13.1",
     "css-loader": "^0.28.1",
@@ -111,10 +107,12 @@
     "html-webpack-plugin": "^2.28.0",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
+    "marked": "^0.4.0",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.1",
     "postcss-loader": "^1.3.3",
     "pre-commit": "^1.2.2",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.5.10",
     "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
