--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "lint:style": "stylelint styles/**/*.scss examples/styles/**/*.scss --syntax scss",
     "lint:style:fix": "stylelint --fix styles/**/*.scss examples/styles/**/*.scss --syntax scss",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:style",
-    "lint-staged": "lint-staged",
+    "precommit": "lint-staged",
     "test": "jest --coverage",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "docs": "cd docs && gitbook install && gitbook serve",
     "authors": "git log --format='%aN <%aE>' | sort -u | grep -v 'users.noreply.github.com' > AUTHORS"
@@ -53,6 +54,8 @@
     "normalize.css": "^7.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "@types/classnames": "^2.2.3",
     "@types/enzyme-to-json": "^1.5.0",
     "@types/jest": "^21.1.5",
@@ -102,6 +105,7 @@
     "gulp-sourcemaps": "^2.6.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
     "marked": "^0.4.0",
@@ -113,8 +117,8 @@
     "prop-types": "^15.5.10",
     "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^15.6.1",
     "react-transition-group": "^2.2.1",
@@ -167,8 +171,5 @@
     "components/**/*.{ts,tsx}": "lint:ts",
     "{components,examples}/**/*.{js,jsx}": "lint:js",
     "{styles,examples}/**/*.scss": "lint:style"
-  },
-  "pre-commit": [
-    "lint-staged"
-  ]
+  }
 }
