升级animate版本，修复双击expand出错的bug

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "normalize.css": "^7.0.0",
-    "rc-animate": "3.0.0-rc.1"
+    "rc-animate": "^3.0.0-rc.5"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.3",
