--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-.idea
-<<<<<<< HEAD
+assets
 coverage
-=======
+dist
+es
+lib
+node_modules
+_book
+.idea
 .DS_Store
 .temp
 .history
@@ -18,4 +22,3 @@ components/**/*.js
 components/*.js
 xcuserdata
 package-lock.json
->>>>>>> dev
