--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "3.0.2",
     "fastclick": "^1.0.6",
     "file-loader": "^0.11.1",
     "gh-pages": "^1.0.0",
