--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@types/react": "16.4.2",
     "@types/react-dom": "^16.0.2",
     "autoprefixer": "^6.7.7",
-    "awesome-typescript-loader": "^3.2.3",
+    "awesome-typescript-loader": "^5.0.0",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.1",
@@ -95,7 +95,7 @@
     "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "3.0.2",
     "fastclick": "^1.0.6",
-    "file-loader": "^0.11.1",
+    "file-loader": "^1.1.11",
     "gh-pages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
@@ -106,14 +106,15 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
     "history": "^4.7.2",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^4.3.0",
     "marked": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.5.2",
-    "optimize-css-assets-webpack-plugin": "3.2.0",
-    "postcss-loader": "^1.3.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "postcss-loader": "^2.1.5",
     "pre-commit": "^1.2.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.5.10",
@@ -132,11 +133,13 @@
     "tslint": "^5.7.0",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.9.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^3.6.0",
+    "typescript": "^3.0.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.8.3",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "2.7.1"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.4"
   },
   "jest": {
     "roots": [
