--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "css-animation": "^1.2.5",
     "normalize.css": "^7.0.0",
-    "rc-animate": "^3.0.0-rc.5",
-    "css-animation": "^1.2.5"
+    "rc-animate": "^3.0.0-rc.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
@@ -120,6 +120,7 @@
     "raf": "^3.4.0",
     "raw-loader": "^0.5.1",
     "react": "^16.4.0",
+    "react-click-outside": "tj/react-click-outside",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.4.2",
