--- a/package.json
+++ b/package.json
@@ -176,5 +176,11 @@
     "components/**/*.{ts,tsx}": "lint:ts",
     "{components,examples}/**/*.{js,jsx}": "lint:js",
     "{styles,examples}/**/*.scss": "lint:style"
-  }
+  },
+  "sideEffects": [
+    "dist/*",
+    "components/style/*",
+    "es/**/style/*",
+    "lib/**/style/*"
+  ]
 }
