--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "classnames": "^2.2.5",
     "css-animation": "^1.2.5",
     "normalize.css": "^7.0.0",
-    "rc-animate": "^3.0.0-rc.5"
+    "rc-animate": "^3.0.0-rc.5",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.0.0",
