feat: add range date picker and range time calendar selector
add env to travis, different time zone will generate different snap

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lint:style:fix": "stylelint --fix styles/**/*.scss examples/styles/**/*.scss --syntax scss",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:style",
     "precommit": "lint-staged",
-    "test": "jest --coverage",
+    "test": "cross-env TZ=America/New_York jest --coverage",
     "commitmsg": "commitlint -e $GIT_PARAMS",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "docs": "cd docs && gitbook install && gitbook serve",
@@ -84,6 +84,7 @@
     "codemirror": "^5.38.0",
     "core-js": "^2.5.1",
     "coveralls": "^2.13.1",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
     "enzyme": "^3.1.0",
