--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: node_js
 node_js:
   - 6
   - 8
+before_install:
+  - export TZ=America/New_York
 script:
   - npm run lint
   - npm run test
