--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-filesize": "0.0.6",
+    "gulp-modify-css-urls": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
