--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "css-animation": "^1.2.5",
+    "hoist-non-react-statics": "^3.0.1",
     "normalize.css": "^7.0.0",
     "rc-animate": "^3.0.0-rc.5",
     "tslib": "^1.9.3"
