--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - export TZ=America/New_York
 script:
   - npm run lint
-  - npm run test
+  - npm run test -- -i
 after_script:
   - npm run coverage
