fix: change the method of the Modal, handle the zIndex problem when display multi-modal at the same time

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
     "jsx": "react",
