--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
-    "enzyme": "3.5.0",
-    "enzyme-adapter-react-16": "1.3.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^4.19.1",
     "eslint-config-za": "^1.0.1",
