--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dragon-ui",
-  "version": "1.0.0-alpha.20",
+  "name": "zarm-web",
+  "version": "1.0.0-alpha.1",
   "description": "基于 React 的桌面端UI库",
   "tags": [
     "dragon-ui",
