--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zarm-web",
-  "version": "1.0.0-alpha.1",
+  "version": "0.0.0",
   "description": "基于 React 的桌面端UI库",
   "tags": [
     "dragon-ui",
