--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@types/react": "16.4.2",
     "@types/react-dom": "^16.0.2",
     "autoprefixer": "^6.7.7",
-    "awesome-typescript-loader": "^5.0.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.1",
@@ -139,7 +139,7 @@
     "tslint": "^5.7.0",
     "tslint-eslint-rules": "^4.1.1",
     "tslint-react": "^3.2.0",
-    "typescript": "^3.0.1",
+    "typescript": "3.4.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
