--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.3.11",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.4.2",
     "react-transition-group": "^2.2.1",
