--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@types/classnames": "^2.2.3",
     "@types/enzyme-to-json": "^1.5.0",
     "@types/jest": "^21.1.5",
-    "@types/react": "16.4.2",
+    "@types/react": "^16.8.17",
     "@types/react-dom": "^16.0.2",
     "autoprefixer": "^6.7.7",
     "awesome-typescript-loader": "^5.2.1",
@@ -75,6 +75,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-import": "^1.6.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
