--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "types/*"
+      ]
+    },
     "strictNullChecks": true,
     "moduleResolution": "node",
     "jsx": "react",
@@ -8,6 +14,7 @@
     "importHelpers": true,
     "allowSyntheticDefaultImports": true,
     "target": "es6",
+    "strict": true,
     "types": [
       "classnames",
       "react",
@@ -15,7 +22,8 @@
     ]
   },
   "include": [
-    "components/**/*"
+    "components/**/*",
+    "types/**/*"
   ],
   "exclude": [
     "node_modules",
