--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "classnames": "^2.2.5",
     "css-animation": "^1.2.5",
     "hoist-non-react-statics": "^3.0.1",
+    "popper.js": "^1.15.0",
     "rc-animate": "^3.0.0-rc.5",
     "tslib": "^1.9.3"
   },
