chore: temp remove modal should component update method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "strict": true,
-    "noImplicitAny": true,
+//    "strict": true,
+//    "noImplicitAny": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
     "jsx": "react",
