--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lint:js": "eslint --ext '.js,.jsx' site",
     "lint:style": "stylelint --syntax scss components/**/*.scss components/**/**/*.scss site/styles/**/*.scss",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:style",
-    "test": "rimraf coverage && cross-env TZ=America/New_York jest --coverage",
+    "test": "rimraf coverage && cross-env TZ=America/New_York jest --config scripts/jest/config.js --coverage",
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "authors": "git log --format='%aN <%aE>' | sort -u | grep -v 'users.noreply.github.com' > AUTHORS",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -w -r 0",
