--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.18.2",
     "stylelint": "^7.12.0",
-    "stylelint-config-standard": "^16.0.0",
+    "stylelint-config-za": "^0.1.0",
     "through2": "^3.0.1",
     "ts-jest": "^22.4.6",
     "typescript": "^3.4.5",
