--- a/package.json
+++ b/package.json
@@ -164,6 +164,11 @@
     "{components,site}/**/*.{js,jsx}": "eslint",
     "{styles,site}/**/*.scss": "stylelint"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "browserslist": [
     "last 2 versions",
     "Firefox ESR",
