--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "normalize.css": "8.0.1",
     "popper.js": "^1.15.0",
     "rc-animate": "^3.0.0-rc.5",
+    "react-highlight": "^0.12.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
@@ -121,7 +122,6 @@
     "gh-pages": "^1.0.0",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2",
-    "highlight.js": "^9.15.8",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.4.1",
