chore: babel compile using assignment expressions static properties

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "clean": "rimraf types lib es dist assets coverage bundle components/*.js components/**/*.js components/**/**/*.js",
     "dev": "webpack-dev-server --config scripts/webpack/config.dev.js",
     "build:types": "rimraf types && tsc --outDir types -d --emitDeclarationOnly",
-    "build:es": "rimraf es && babel components -d es -m es6 --extensions \".ts,.tsx\" --copy-files --presets @babel/typescript,@babel/react --plugins @babel/plugin-proposal-class-properties,@babel/plugin-proposal-object-rest-spread",
-    "build:lib": "rimraf lib && babel components -d lib -m commonjs --extensions \".ts,.tsx\" --copy-files --presets @babel/env,@babel/react,@babel/typescript --plugins @babel/plugin-proposal-class-properties",
+    "build:es": "rimraf es && babel components -d es -m es6 --extensions \".ts,.tsx\" --copy-files --config-file ./scripts/babel/config.es.js",
+    "build:lib": "rimraf lib && babel components -d lib -m commonjs --extensions \".ts,.tsx\" --copy-files --config-file ./scripts/babel/config.lib.js",
     "build:umd": "rimraf dist && webpack --config scripts/webpack/config.umd.js && cross-env NODE_ENV=production webpack --config scripts/webpack/config.umd.js",
     "build:css": "rimraf lib/**/style/css.js lib/***/style/*.css es/**/style/css.js es/**/style/*.css && cd scripts/gulp && gulp",
     "build": "npm run build:lib && npm run build:es && npm run build:umd && npm run build:css",
