style: sass format

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,4 @@
 {
   "root": true,
-  "extends": "stylelint-config-za",
-  "rules": {
-    "no-eol-whitespace": null,
-    "function-name-case": null,
-    "block-closing-brace-newline-after": null,
-    "custom-property-empty-line-before": null
-  }
+  "extends": "stylelint-config-za"
 }
