fix: throttle.ts type fixed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "es6",
     "skipLibCheck": true,
+    "strict": true,
     "types": [
       "classnames",
       "react",
