--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "popper.js": "^1.15.0",
     "rc-animate": "^3.0.0-rc.5",
     "react-highlight": "^0.12.0",
-    "tslib": "^1.9.3"
+    "tslib": "^1.9.3",
+    "zarm": "2.0.0-alpha.48"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -71,7 +72,7 @@
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
@@ -150,7 +151,7 @@
     "stylelint-config-za": "^0.1.0",
     "through2": "^3.0.1",
     "ts-jest": "^22.4.6",
-    "typescript": "^3.5.0",
+    "typescript": "^3.5.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.29.6",
