--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "rimraf": "^2.6.3",
     "stylelint": "^7.12.0",
     "stylelint-config-za": "^0.1.0",
-    "typescript": "^3.5.3"
+    "typescript": "3.5.3"
   },
   "lint-staged": {
     "components/**/*.{ts,tsx}": "eslint",
