--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ install:
   - yarn --ignore-engines
 script:
   - npm run lint
-  - npm run test -- -w 2
+  - npm run test
 after_script:
   - npm run coverage
