--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
     "react-highlight": "^0.12.0",
-    "zarm": "2.0.0-alpha.49"
+    "zarm": "2.0.0-alpha.51"
   },
   "devDependencies": {
     "@babel/standalone": "^7.0.0",
@@ -65,8 +65,8 @@
     "@types/classnames": "^2.2.3",
     "@types/react": "^16.8.6",
     "@types/react-dom": "^16.9.0",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "@zarm-design/cli": "^0.0.7",
     "babel-eslint": "^10.0.1",
     "browserslist": "^4.6.6",
@@ -82,7 +82,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^5.16.0",
-    "eslint-config-za": "^2.0.0",
+    "eslint-config-za": "^2.1.0-alpha.2",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
@@ -106,7 +106,7 @@
     "rimraf": "^2.6.3",
     "stylelint": "^7.12.0",
     "stylelint-config-za": "^0.1.0",
-    "typescript": "3.5.3"
+    "typescript": "^3.5.3"
   },
   "lint-staged": {
     "components/**/*.{ts,tsx}": "eslint",
