--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
     "react-highlight": "^0.12.0",
+    "webpack": "^4.40.2",
     "zarm": "2.0.0-alpha.51"
   },
   "devDependencies": {
