--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "coverage": "cat ./coverage/lcov.info | coveralls",
     "authors": "git log --format='%aN <%aE>' | sort -u | grep -v 'users.noreply.github.com' > AUTHORS",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -w -r 0",
-    "release": "bash scripts/release.sh"
+    "release": "bash scripts/release.sh",
+    "commit": "git-cz"
   },
   "dependencies": {
     "async-validator": "^1.10.1",
@@ -89,6 +90,7 @@
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
     "gh-pages": "^1.0.0",
+    "git-cz": "^3.2.1",
     "highlight.js": "^9.12.0",
     "history": "^4.7.2",
     "husky": "^2.3.0",
