refactor: export types

--- a/package.json
+++ b/package.json
@@ -27,13 +27,12 @@
   },
   "module": "es/index.js",
   "main": "lib/index.js",
-  "typings": "types/index.d.ts",
+  "typings": "lib/index.d.ts",
   "scripts": {
     "clean": "rimraf types lib es dist assets coverage",
     "dev": "zarm dev -p 3001",
-    "build:types": "rimraf types && tsc --outDir types -d --emitDeclarationOnly",
-    "build:es": "rimraf es && zarm build --mode es",
-    "build:lib": "rimraf lib && zarm build --mode lib",
+    "build:es": "rimraf es && zarm build --mode es && tsc --outDir es -d --emitDeclarationOnly",
+    "build:lib": "rimraf lib && zarm build --mode lib && tsc --outDir lib -d --emitDeclarationOnly",
     "build:umd": "rimraf dist && zarm build --mode umd",
     "build": "npm run build:lib && npm run build:es && npm run build:umd",
     "deploy:build": "rimraf assets && zarm deploy",
