chore: use typings from zarm

--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
   "scripts": {
     "clean": "rimraf types lib es dist assets coverage",
     "dev": "zarm dev -p 3001",
-    "build:types": "rimraf types && tsc --outDir types -d --emitDeclarationOnly",
-    "build:es": "rimraf es && zarm build --mode es",
-    "build:lib": "rimraf lib && zarm build --mode lib",
+    "build:es": "rimraf es && zarm build --mode es && rimraf types && tsc --outDir es -d --emitDeclarationOnly",
+    "build:lib": "rimraf lib && zarm build --mode lib && rimraf types && tsc --outDir lib -d --emitDeclarationOnly",
     "build:umd": "rimraf dist && zarm build --mode umd",
-    "build": "npm run build:lib && npm run build:es && npm run build:umd && npm run build:types",
+    "build": "npm run build:lib && npm run build:es && npm run build:umd",
     "deploy:build": "rimraf assets && zarm deploy",
     "deploy": "npm run deploy:build && gh-pages -d assets",
     "lint:ts": "eslint --ext .ts,.tsx components",
