--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "async-validator": "^1.10.1",
     "classnames": "2.2.6",
+    "create-react-context": "^0.3.0",
     "css-animation": "^1.2.5",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
