--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zarm-web",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.2",
   "description": "基于 React 的桌面端UI库",
   "tags": [
     "zarm-web",
@@ -51,6 +51,7 @@
     "async-validator": "^1.10.1",
     "classnames": "2.2.6",
     "css-animation": "^1.2.5",
+    "color": "^3.1.0",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
     "zarm": "2.0.0-alpha.63"
@@ -68,7 +69,6 @@
     "@zarm-design/cli": "^0.0.11",
     "babel-eslint": "10.0.3",
     "browserslist": "^4.6.6",
-    "color": "^3.1.0",
     "concurrently": "^3.5.1",
     "conventional-changelog-cli": "^1.3.22",
     "core-js": "^3.0.1",
