feat: 组件 select

--- a/package.json
+++ b/package.json
@@ -132,5 +132,11 @@
     "es/**/style/*",
     "lib/**/style/*",
     "site/**"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  }
 }
