chore: update site

--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   "dependencies": {
     "async-validator": "^1.10.1",
     "classnames": "2.2.6",
-    "create-react-context": "^0.3.0",
     "color": "^3.1.0",
+    "create-react-context": "^0.3.0",
     "css-animation": "^1.2.5",
     "normalize.css": "8.0.1",
     "rc-animate": "^3.0.0-rc.5",
@@ -105,8 +105,9 @@
     "react-dom": "^16.9.0",
     "react-highlight": "^0.12.0",
     "react-hot-loader": "^4.12.13",
+    "react-intl": "^5.7.1",
     "react-loadable": "^5.5.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "rimraf": "^2.6.3",
     "stylelint": "^11.1.1",
     "stylelint-config-za": "^0.1.0",
