chore: add github pages actions

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build:lib": "rimraf lib && zarm build --mode lib --path components --out-dir lib --copy-files --build-css",
     "build:umd": "rimraf dist && zarm build --mode umd --path components/style/entry.tsx,components/index.tsx --out-dir dist && zarm build --mode umd-ugly --path components/style/entry.tsx,components/index.tsx --out-dir dist",
     "build": "npm run build:lib && npm run build:es && npm run build:umd",
-    "deploy:build": "rimraf assets && zarm deploy",
+    "deploy:build": "rimraf assets && mkdir assets && touch assets/CNAME && echo 'web.zarm.design' > assets/CNAME && zarm deploy",
     "deploy": "npm run deploy:build -- -p && gh-pages -d assets",
     "lint:ts": "eslint --ext .ts,.tsx components",
     "lint:js": "eslint --ext .js,.jsx site",
@@ -68,7 +68,7 @@
     "@types/react-dom": "^16.9.0",
     "@typescript-eslint/eslint-plugin": "2.5.0",
     "@typescript-eslint/parser": "2.5.0",
-    "@zarm-design/cli": "^0.0.22",
+    "@zarm-design/cli": "^0.0.25",
     "babel-eslint": "10.0.3",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.6.6",
